# habr-career-check

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: database.py  habr_client.py  models.py
src/tests/: test_habr_career_user.py
